v46:
- Update 1fichier.com, filextras.com, katfile.com
v45:
- Update fboom.me
v44:
- Update class.php
v43:
- Update fboom.me
v42:
- Update fboom.me
- Update ajax.js
v41:
- Update uptobox.com, filefactory.com, hitfile.net, katfile.com
- Update class.php
v40:
- Update turbobit.net, hitfile.net, k2s.cc
- Update class.php
v39:
- Update class.php
- Update extmatrix.com, prefiles.com, hotlink.cc, hitfile.net
v38:
- Update class.php
- Update ajax.js
- Update k2s.cc
- Upscale theme size, add selectize.js
- Fix bug check account
v37:
- JQuery upgrade to version 1.12.4 due to CVE-2017-16011
- Add Data-Leakage notification
v36:
- Fix hosts.php
- Update class.php
v35:
- Fix class.php
- Update k2s.cc
v34:
- Fix class.php
- Update nitroflare.com, uploadgig.com, icerbox.com, easybytez.com, filer.net, katfile.com
v33:
- Add worldbytez.com
- Minor fix class.php
v32:
- Add filefox.cc, filer.net, florenfile.com, wupfile.com
- Minor fix class.php
v31:
- Add chomikuj.pl
- Add new lib function TrimCookies
- Update lib function parseRedirect
- Update lastest user agents string
- Enhanced GUI
v30:
- Change how to get new update
v29:
- Fix Donate Account function
v28:
- Add fileshark.pl
- Update .gitignore
v27:
- Update easybytez.com
v26:
- Hotfix for v25
v25:
- Support HTTPS downloading url while using SSL for vinaget
- Update new Config Menu
- Add option recaptcha v2 on login page
v24:
- Update fshare.vn
v23:
- Update 4share.vn
- Fix check link turbobit.net
v22:
- Fix filesmonster.com
- Add isra.cloud
- Minor fix class.php
v21:
- Fix icerbox.com
- Add hotlink.cc
- Fix sort by Plugin/Premium Account Name in AdminCP
- Remove catshare.net, tenlua.vn
v20:
- Fix uptobox.com
v19:
- Fix depositfiles.com, hitfile.net, novafile.com, uploadgig.com
- Reformat code
v18:
- Update k2s.cc
- Add option not filter cookie when save cookie
- Update checkaccount.php
- Support vinaget url:port
v17:
- Update upfile.vn, prefiles.com
v16:
- Fix html footer
- Update icerbox.com
v15:
- Update 1fichier.com